# founder-os-lite

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.md  skill_improvement.md  skill_request.md
.github/workflows/: tests.yml
plugins/telos/: .mcp.json
plugins/telos/.claude-plugin/: plugin.json
plugins/telos/brain-mcp/: pyproject.toml  server.py
plugins/telos/hooks/: hooks.json  pre-build-coach.sh  session-start.sh
plugins/telos/skills/believers/: SKILL.md
plugins/telos/skills/build-check/: SKILL.md
plugins/telos/skills/default-alive/: SKILL.md
plugins/telos/skills/gbrain/: SKILL.md
plugins/telos/skills/interview/: SKILL.md
plugins/telos/skills/pitch/: SKILL.md
plugins/telos/skills/pivot/: SKILL.md
plugins/telos/skills/pmf-check/: SKILL.md
plugins/telos/skills/problem/: SKILL.md
plugins/telos/skills/roleplay/: SKILL.md
plugins/telos/skills/start/: SKILL.md
plugins/telos/skills/story/: SKILL.md
plugins/telos/skills/why/: SKILL.md
tests/: README.md  test_adversarial.py  test_e2e.py  test_hook.sh  test_hook_timeout.py  test_integration.py  test_mcp.py  test_new_skills.py  test_skills.py
